--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Build Flet APK
 on:
   push:
     branches:
-      - main  # 監聽 main 分支的變更，您可以改成其他分支名稱
+      - main  # 監聽 main 分支的變更
 
 jobs:
   build-apk:
@@ -13,10 +13,16 @@ jobs:
     - name: 檢出程式碼
       uses: actions/checkout@v3
 
-    - name: 設定 Python 環境
+    - name: 安裝 Python 環境
       uses: actions/setup-python@v4
       with:
-        python-version: "3.10"  # 確保 Python 版本支援 Flet
+        python-version: "3.10"
+
+    - name: 安裝 Flutter
+      run: |
+        git clone https://github.com/flutter/flutter.git -b stable
+        echo "${{ github.workspace }}/flutter/bin" >> $GITHUB_PATH
+        flutter --version
 
     - name: 安裝必要套件
       run: |
@@ -31,4 +37,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: flet-apk
-        path: build/app/outputs/apk/release/  # 調整為 APK 輸出的實際路徑
+        path: build/app/outputs/apk/release/  # 確保此路徑與實際輸出路徑一致
