--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,10 @@ jobs:
         yes | sdkmanager --licenses
         sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.0"
 
+    - name: 安裝 Linux 開發工具
+      run: |
+        sudo apt-get install -y ninja-build libgtk-3-dev
+
     - name: 安裝 Flutter
       run: |
         git clone https://github.com/flutter/flutter.git -b stable
@@ -41,7 +45,9 @@ jobs:
     - name: 安裝必要套件
       run: |
         python -m pip install --upgrade pip
-        pip install flet flet-cli numpy opencv-python flask
+        pip install pip-tools
+        pip-compile requirements.txt
+        pip install -r requirements.txt
 
     - name: 打包 APK
       run: |
