--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,28 @@ jobs:
       with:
         python-version: "3.10"
 
-    - name: 安裝必要依賴和升級工具
+    - name: 安裝 Android 開發工具
       run: |
-        python -m pip install --upgrade pip setuptools wheel
+        sudo apt-get update
+        sudo apt-get install -y openjdk-11-jdk wget unzip
+        mkdir -p $HOME/android-sdk/cmdline-tools
+        wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip -O cmdline-tools.zip
+        unzip cmdline-tools.zip -d $HOME/android-sdk/cmdline-tools
+        mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
+        export ANDROID_SDK_ROOT=$HOME/android-sdk
+        export PATH=$PATH:$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools
+        yes | sdkmanager --licenses
+        sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.0"
 
-    - name: 安裝依賴並捕獲日誌
+    - name: 安裝 Ninja 構建系統
       run: |
-        pip install -r requirements.txt --verbose
+        sudo apt-get update
+        sudo apt-get install -y ninja-build
+
+    - name: 安裝 GTK 3.0 開發庫
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libgtk-3-dev
 
     - name: 安裝 Flutter
       run: |
@@ -32,6 +47,11 @@ jobs:
         export PATH="$PATH:${{ github.workspace }}/flutter/bin"
         flutter precache --android --force
         flutter doctor
+
+    - name: 安裝必要套件
+      run: |
+        python -m pip install --upgrade pip setuptools wheel
+        pip install -r requirements.txt
 
     - name: 打包 APK
       run: |
