--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,10 @@ jobs:
       with:
         python-version: "3.10"
 
-    - name: 安裝必要的構建工具
+    - name: 安裝構建工具
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential python3-dev libopenblas-dev gfortran
+        sudo apt-get install -y build-essential python3-dev libopenblas-dev gfortran cmake
 
     - name: 升級 pip 和相關工具
       run: |
