--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,52 +10,52 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: 檢出程式碼
-      - name: 檢出程式碼
+      # Step 1: Check out code
+      - name: Check out code
         uses: actions/checkout@v3
 
-      # Step 2: 安裝 Python 環境
-      - name: 安裝 Python 環境
+      # Step 2: Set up Python environment
+      - name: Set up Python environment
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      # Step 3: 安裝必要的構建工具
-      - name: 安裝構建工具
+      # Step 3: Install necessary build tools
+      - name: Install build tools
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential ninja-build python3-dev libopenblas-dev gfortran cmake openjdk-11-jdk
 
-      # Step 4: 安裝 Flutter 使用 Flutter Action
-      - name: 安裝 Flutter
+      # Step 4: Install Flutter using Flutter Action
+      - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'  # 或指定具體版本，如 '3.13.6'
+          flutter-version: '3.13.6'  # Specify the exact Flutter version
 
-      # Step 5: 檢查 Flutter 安裝狀態
+      # Step 5: Verify Flutter installation
       - name: Flutter Doctor
         run: flutter doctor -v
 
-      # Step 6: 安裝 Cython、Flet 和依賴
-      - name: 安裝 Cython、Flet 和依賴
+      # Step 6: Install Cython, Flet, and dependencies
+      - name: Install Cython, Flet, and dependencies
         run: |
           pip install --upgrade pip
           pip install cython
           pip install -r requirements.txt
           pip install flet
 
-      # Step 7: 獲取 Flutter 依賴
-      - name: 安裝 Flutter 依賴
+      # Step 7: Get Flutter dependencies
+      - name: Get Flutter dependencies
         run: flutter pub get
 
-      # Step 8: 打包 APK
-      - name: 打包 APK
+      # Step 8: Build APK
+      - name: Build APK
         run: |
           flet build apk > build_log.txt 2>&1
-        continue-on-error: true  # 如果失敗，繼續後續步驟
+        continue-on-error: true  # Continue even if this step fails
 
-      # Step 9: 上傳構建日誌
-      - name: 上傳日誌
+      # Step 9: Upload build logs
+      - name: Upload logs
         uses: actions/upload-artifact@v3
         with:
           name: build-logs
