--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,52 +10,54 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Check out code
-      - name: Check out code
+      # Step 1: 檢出程式碼
+      - name: 檢出程式碼
         uses: actions/checkout@v3
 
-      # Step 2: Set up Python environment
-      - name: Set up Python environment
+      # Step 2: 安裝 Python 環境
+      - name: 安裝 Python 環境
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      # Step 3: Install necessary build tools
-      - name: Install build tools
+      # Step 3: 安裝必要的構建工具
+      - name: 安裝構建工具
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential ninja-build python3-dev libopenblas-dev gfortran cmake openjdk-11-jdk
 
-      # Step 4: Install Flutter using Flutter Action
-      - name: Install Flutter
+      # Step 4: 安裝 Flutter 使用 Flutter Action
+      - name: 安裝 Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.13.6'  # Specify the exact Flutter version
+          channel: 'stable' # 設定為 'stable' 頻道
+          flutter-version: 'stable' # 指定 Flutter 版本為 'stable'
 
-      # Step 5: Verify Flutter installation
+      # Step 5: 檢查 Flutter 安裝狀態
       - name: Flutter Doctor
         run: flutter doctor -v
 
-      # Step 6: Install Cython, Flet, and dependencies
-      - name: Install Cython, Flet, and dependencies
+      # Step 6: 安裝 Cython、Flet 和依賴
+      - name: 安裝 Cython、Flet 和依賴
         run: |
           pip install --upgrade pip
           pip install cython
           pip install -r requirements.txt
           pip install flet
 
-      # Step 7: Get Flutter dependencies
-      - name: Get Flutter dependencies
+      # Step 7: 獲取 Flutter 依賴
+      - name: 安裝 Flutter 依賴
         run: flutter pub get
+        working-directory: ./path/to/flutter/project # 替換為你的 Flutter 專案目錄
 
-      # Step 8: Build APK
-      - name: Build APK
+      # Step 8: 打包 APK 並記錄日誌
+      - name: 打包 APK
         run: |
-          flet build apk > build_log.txt 2>&1
-        continue-on-error: true  # Continue even if this step fails
+          flet build apk --name "com.example.myapp" --version "1.0.0" > build_log.txt 2>&1
+        continue-on-error: true # 如果失敗，繼續後續步驟
 
-      # Step 9: Upload build logs
-      - name: Upload logs
+      # Step 9: 上傳構建日誌
+      - name: 上傳構建日誌
         uses: actions/upload-artifact@v3
         with:
           name: build-logs
