--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,12 +30,12 @@ jobs:
       - name: 安裝 Flutter SDK
         uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'          # 設定 Flutter 頻道為 'stable'
-          flutter-version: 'latest'  # 使用 'latest' 而非 'stable'
-          architecture: 'x64'        # 使用小寫 'x64'
-          cache: false                # 禁用緩存（可根據需要啟用）
-          pub-cache-path: 'default'   # 使用預設的 pub cache 路徑
-          dry-run: false              # 正常執行安裝
+          channel: 'stable'           # 設定 Flutter 頻道為 'stable'
+          flutter-version: '3.13.6'   # 指定具體的 Flutter 版本，避免使用 'latest'
+          architecture: 'x64'         # 使用小寫 'x64'
+          cache: false                 # 可根據需要啟用或禁用緩存
+          pub-cache-path: 'default'    # 使用預設的 pub cache 路徑
+          dry-run: false               # 正常執行安裝
 
       # Step 5: 檢查 Flutter 安裝狀態
       - name: Flutter Doctor
@@ -52,7 +52,7 @@ jobs:
       # Step 7: 獲取 Flutter 依賴
       - name: 獲取 Flutter 依賴
         run: flutter pub get
-        # 如果你的 Flutter 專案在子目錄，請取消註解並設置正確的路徑
+        # 如果你的 Flutter 專案在子目錄，請設置正確的工作目錄
         # working-directory: ./path/to/flutter/project
 
       # Step 8: 打包 APK 並記錄日誌
@@ -70,7 +70,7 @@ jobs:
 
       # Step 10: （可選）上傳生成的 APK
       - name: 上傳 APK
-        if: success() && steps.build-apk.outcome == 'success'
+        if: success()
         uses: actions/upload-artifact@v3
         with:
           name: app-release.apk
