--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,76 +1,63 @@
-name: Build and Debug Flet APK
+name: Flutter CI
 
+# 触发工作流的事件
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
+# 定义工作任务
 jobs:
-  build-apk:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: 檢出程式碼
-      - name: 檢出程式碼
+      # 1. 检出仓库代码
+      - name: 检出仓库
         uses: actions/checkout@v3
 
-      # Step 2: 設定 Python 環境
-      - name: 設定 Python 環境
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-
-      # Step 3: 安裝必要的構建工具
-      - name: 安裝構建工具
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential ninja-build python3-dev libopenblas-dev gfortran cmake openjdk-11-jdk
-
-      # Step 4: 安裝 Flutter SDK 使用 subosito/flutter-action@v2
-      - name: 安裝 Flutter SDK
+      # 2. 设置 Flutter 环境
+      - name: 设置 Flutter
         uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'           # 設定 Flutter 頻道為 'stable'
-          flutter-version: '3.13.6'   # 指定具體的 Flutter 版本，避免使用 'latest'
-          architecture: 'x64'         # 使用小寫 'x64'
-          cache: false                 # 可根據需要啟用或禁用緩存
-          pub-cache-path: 'default'    # 使用預設的 pub cache 路徑
-          dry-run: false               # 正常執行安裝
+          channel: stable
+          flutter-version: '3.13.6'  # 您可以根据需要更改为最新版本
+          architecture: 'x64'
+          cache: false
 
-      # Step 5: 檢查 Flutter 安裝狀態
-      - name: Flutter Doctor
+      # 3. 验证 Flutter 安装是否成功
+      - name: 运行 Flutter Doctor
         run: flutter doctor -v
 
-      # Step 6: 安裝 Cython、Flet 和其他依賴
-      - name: 安裝 Cython、Flet 和依賴
-        run: |
-          pip install --upgrade pip
-          pip install cython
-          pip install -r requirements.txt
-          pip install flet
+      # 4. 切换到 Flutter 项目目录（如果项目不在仓库根目录）
+      #    如果您的 Flutter 项目位于仓库的子目录（例如 "ballApp"），请取消注释以下步骤并进行相应修改
+      # - name: 切换到项目目录
+      #   run: cd ballApp
 
-      # Step 7: 獲取 Flutter 依賴
-      - name: 獲取 Flutter 依賴
+      # 5. 获取 Flutter 依赖
+      - name: 获取 Flutter 依赖
         run: flutter pub get
-        working-directory: ./ # 根據你的專案結構調整路徑
+        # 如果需要指定工作目录，请添加 `working-directory` 参数，例如：
+        # working-directory: ./ballApp
 
-      # Step 8: 打包 APK 並記錄日誌
-      - name: 打包 APK
-        run: |
-          flet build apk --name "com.example.myapp" --version "1.0.0" > build_log.txt 2>&1
-        continue-on-error: true # 即使失敗也繼續後續步驟
+      # 6. 运行 Flutter 测试（可选）
+      - name: 运行 Flutter 测试
+        run: flutter test
+        # 如果需要指定工作目录，请添加 `working-directory` 参数，例如：
+        # working-directory: ./ballApp
 
-      # Step 9: 上傳構建日誌
-      - name: 上傳構建日誌
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-logs
-          path: build_log.txt
+      # 7. 构建 Flutter 应用（根据需要添加）
+      # - name: 构建应用
+      #   run: flutter build apk --release
+      #   # 如果需要指定工作目录，请添加 `working-directory` 参数，例如：
+      #   # working-directory: ./ballApp
 
-      # Step 10: （可選）上傳生成的 APK
-      - name: 上傳 APK
-        if: success()
-        uses: actions/upload-artifact@v3
-        with:
-          name: app-release.apk
-          path: path/to/generated/apk  # 替換為實際的 APK 路徑
+      # 8. 上传构建产物（根据需要添加）
+      # - name: 上传构建产物
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: app-release.apk
+      #     path: build/app/outputs/flutter-apk/app-release.apk
